added title in table

--- a/src/app/shared/tableComponent/base-table-component/base-table-component.html
+++ b/src/app/shared/tableComponent/base-table-component/base-table-component.html
@@ -6,6 +6,12 @@
 }
 
 <div class="base-table space-y-6">
+  <!-- Table Heading -->
+  <div class="text-2xl font-bold text-gray-800 text-center md:text-left mb-4">
+    {{ tableTitle }}
+  </div>
+
+<div class="base-table space-y-6">
   <!-- Filter Section -->
   <div class="filter-section flex flex-col md:flex-row items-center justify-around gap-4 mb-6">
     <mat-form-field class="flex-1">
