--- a/src/app/features/user/user.component/user.component.html
+++ b/src/app/features/user/user.component/user.component.html
@@ -1,19 +1,11 @@
 <div class="user-table-container">
 
-  <app-tableheader-component 
-  [tableTitle]="tableTitle"
-  [buttonLabel]="buttonLabel"
-  (buttonClicked)="openAddUserForm()">
+  <app-tableheader-component [tableTitle]="tableTitle" [buttonLabel]="buttonLabel" (buttonClicked)="openAddUserForm()">
 
   </app-tableheader-component>
 
-  <app-base-table-component
-    [columns]="columns"
-    [rows]="(rows$ | async) || []"
-    [total]="(total$ | async) || 0"
-    (pageChange)="onPageChange($event)"
-    (sortChange)="onSortChange($event)"
-    (actionClicked)="handleAction($event)"
-  >
+  <app-base-table-component [columns]="columns" [rows]="(rows$ | async) || []" [total]="(total$ | async) || 0"
+    [serverSide]="false" (pageChange)="onPageChange($event)" (sortChange)="onSortChange($event)"
+    (filterChange)="onFilterChange($event)" (actionClicked)="handleAction($event)">
   </app-base-table-component>
 </div>
