--- a/src/app/shared/tableComponent/tableheader.component/tableheader.component.html
+++ b/src/app/shared/tableComponent/tableheader.component/tableheader.component.html
@@ -1,12 +1,18 @@
 <div class="base-table flex flex-col md:flex-row md:items-center md:justify-between mb-4">
   <!-- Table Title -->
-  <div class="text-2xl font-bold text-gray-800 text-center md:text-left">
+  <div class="text-2xl font-bold text-gray-800">
     {{ tableTitle }}
   </div>
 
-  <!-- Generic Button -->
-  <button mat-raised-button (click)="onActionClick()" class="btn-primary">
+<!-- Generic Button -->
+<button
+  mat-raised-button
+  (click)="onActionClick()"
+  class="btn-primary w-auto sm:w-auto md:w-auto lg:w-auto xl:w-auto block sm:inline-flex sm:w-auto w-full sm:max-w-fit"
+>
   <mat-icon class="text-white">add</mat-icon>
   {{ buttonLabel || 'Add' }}
 </button>
+
+
 </div>
