--- a/src/app/features/user/user-form-component/user-form-component.html
+++ b/src/app/features/user/user-form-component/user-form-component.html
@@ -1,9 +1,6 @@
 <h2 mat-dialog-title>{{ isEditMode ? 'Edit User' : 'Add User' }}</h2>
 
 <mat-dialog-content>
-  <app-base-form-component
-    [config]="formConfig"
-    [initialData]="data?.user || {}"
-    (formSubmit)="onSubmit($event)">
+  <app-base-form-component [config]="formConfig" [initialData]="data?.user || {}" (formSubmit)="onSubmit($event)">
   </app-base-form-component>
 </mat-dialog-content>
